--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <title>Robot Control Login</title>
 
         <!-- include Firebase SDK -->
-        <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
-
         <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
         
@@ -27,9 +25,6 @@
 
             // Make auth and database references
             const auth = firebase.auth();
-            const db = firebase.database();
-
-            
         </script>
 
         <style>
@@ -52,10 +47,10 @@
             cursor: pointer;
             }
 
-            .button.forward { background-color: #4CAF50; color: white; }
-            .button.backward { background-color: #f44336; color: white; }
-            .button.left { background-color: #2196F3; color: white; }
-            .button.right { background-color: #FF9800; color: white; }
+            .button.forward { background-color: #03ac1f; color: white; }
+            .button.backward { background-color: #03ac1f; color: white; }
+            .button.left { background-color: #03ac1f; color: white; }
+            .button.right { background-color: #03ac1f; color: white; }
 
             .button:hover {
             opacity: 0.8;
