--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Robot Control Login</title>
 
-        <!-- include Firebase SDK -->
+        <!-- Include Firebase SDK -->
         <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
@@ -42,7 +42,7 @@
 
             /* Grille avec 2 colonnes par ligne */
             .robot-grid {
-                display: grid;
+                display: none; /* Cacher la grille par défaut */
                 grid-template-columns: repeat(2, 1fr); /* 2 colonnes */
                 gap: 20px; /* Espace entre les cartes */
                 padding: 20px;
@@ -114,7 +114,7 @@
         </div>
 
         <!--LOGIN FORM-->
-        <form id="login-form" style="display: none;">
+        <form id="login-form">
             <div class="form-elements-container">
                 <label for="input-email"><b>Email</b></label>
                 <input type="text" placeholder="Enter Username" id="input-email" required>
@@ -128,7 +128,7 @@
         </form>
 
         <!-- Liste des robots (affichée après connexion) -->
-        <div id="robot-grid" class="robot-grid" style="display: none;">
+        <div id="robot-grid" class="robot-grid">
             <!-- Les cartes des robots seront insérées ici -->
         </div>
 
