--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
             <!-- Les cartes des robots seront insérées ici -->
         </div>
 
+        <!-- Carte du robot sélectionné (affichée après sélection) -->
+        <div id="selected-robot-card" style="display: none; margin: 0 auto; width: 150px;">
+            <!-- La carte du robot sera insérée ici -->
+        </div>
+        
         <!--Panneau de contrôle des robots (boutons de commande)-->
         <div id="control-panel" style="display: none;">
             <button class="button forward" onclick="sendCommand('forward')">Avancer</button><br>
@@ -203,6 +208,16 @@
                             document.getElementById('control-panel').style.display = 'block';
                             // Afficher le bouton de retour
                             backButton.style.display = 'block';
+                            // Insérer la carte du robot sélectionné dans le nouveau div
+                            const selectedRobotCard = document.getElementById('selected-robot-card');
+                            selectedRobotCard.innerHTML = ''; // Vider pour éviter les doublons
+
+                            // Créer un clone de la carte du robot sélectionné pour l'afficher
+                            const clonedRobotCard = robotCard.cloneNode(true);
+                            selectedRobotCard.appendChild(clonedRobotCard);
+
+                            // Afficher la carte du robot sélectionné
+                            selectedRobotCard.style.display = 'block';
                         });
                     }
 
