--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Robot Control Login</title>
 
+        <!-- Include Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
         <!-- Include Firebase SDK -->
         <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
@@ -87,7 +90,7 @@
 
             .button {
                 padding: 15px 20px;
-                font-size: 18px;
+                font-size: 24px;
                 margin: 10px;
                 border: none;
                 border-radius: 5px;
@@ -95,12 +98,12 @@
             }
 
             .button.forward, .button.backward, .button.left, .button.right {
-                background-color: #03ac1f;
-                color: white;
+                color: #03ac1f;
             }
 
             .button:hover {
                 opacity: 0.8;
+                transform: scale(1.10);
             }
         </style>
     </head>
@@ -145,12 +148,20 @@
             <!-- La carte du robot sera insérée ici -->
         </div>
 
-        <!-- Panneau de contrôle des robots (flèches de commande) -->
+        <!-- Panneau de contrôle des robots (icônes Font Awesome) -->
         <div id="control-panel" style="display: none;">
-            <button class="button forward" onclick="sendCommand('forward')">↑</button><br>
-            <button class="button left" onclick="sendCommand('left')">←</button>
-            <button class="button right" onclick="sendCommand('right')">→</button><br>
-            <button class="button backward" onclick="sendCommand('backward')">↓</button><br>
+            <button class="button forward" onclick="sendCommand('forward')">
+                <i class="fa-solid fa-circle-chevron-up"></i>
+            </button><br>
+            <button class="button left" onclick="sendCommand('left')">
+                <i class="fa-solid fa-circle-chevron-left"></i>
+            </button>
+            <button class="button right" onclick="sendCommand('right')">
+                <i class="fa-solid fa-circle-chevron-right"></i>
+            </button><br>
+            <button class="button backward" onclick="sendCommand('backward')">
+                <i class="fa-solid fa-circle-chevron-down"></i>
+            </button><br>
         </div>
 
         <script>
