--- a/index.html
+++ b/index.html
@@ -89,12 +89,13 @@
             }
 
             .button {
-                padding: 15px 20px;
-                font-size: 24px;
+                padding: 15px 40px;
+                font-size: 50px;
                 margin: 10px;
-                border: none;
-                border-radius: 5px;
+                border: none; /* Supprimer la bordure */
+                background: none; /* Supprimer le fond par défaut */
                 cursor: pointer;
+                color: white; /* Couleur de l'icône */
             }
 
             .button.forward, .button.backward, .button.left, .button.right {
