--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             /* Style pour chaque carte de robot */
             .robot-card {
-                background-color: #e4e4e4;
+                background-color: #95f59d;
                 border: 2px solid #000000;
                 border-radius: 10px;
                 padding: 20px;
@@ -89,77 +89,24 @@
             }
 
             .button {
-                padding: 15px;
+                padding: 15px 40px;
                 font-size: 50px;
                 margin: 10px;
                 border: none; /* Supprimer la bordure */
-                background-color: #03ac1f; /* Couleur de fond du bouton */
-                border-radius: 5px; /* Coins arrondis */
+                background: none; /* Supprimer le fond par défaut */
                 cursor: pointer;
-                color: #0e681d; /* Couleur de l'icône */
-                box-shadow: 0px 2px 4px rgba(0,0,0,0.2); /* Ombre légère */
-                transition: transform 0.3s ease, opacity 0.3s ease; /* Transition fluide */
+                color: white; /* Couleur de l'icône */
+            }
+
+            .button.forward, .button.backward, .button.left, .button.right {
+                color: #03ac1f;
             }
 
             .button:hover {
                 opacity: 0.8;
                 transform: scale(1.10);
             }
-
-            /* Panneau de contrôle centré sous la carte sélectionnée */
-            #control-panel-container {
-                display: none; /* Cacher par défaut */
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                gap: 20px; /* Espacement entre la carte et le panneau de contrôle */
-                margin-top: 0; /* Remove margin-top for better alignment */
-                padding-top: 20px; /* Adding padding to prevent the panel from sticking too close to the card */
-            }
-
-            /* Le panneau de contrôle sera affiché sous la carte sélectionnée */
-            #control-panel {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-
-            /* Bouton de retour */
-            #back-button {
-                display: none; /* Cacher par défaut */
-                position: absolute;
-                top: 20px;
-                left: 20px;
-                padding: 10px 20px;
-                background-color: #03ac1f; /* Couleur de fond */
-                color: white; /* Couleur du texte */
-                border: none; /* Supprimer la bordure */
-                border-radius: 5px; /* Coins arrondis */
-                cursor: pointer;
-                box-shadow: 0px 2px 4px rgba(0,0,0,0.2); /* Ombre légère */
-                transition: opacity 0.3s ease;
-            }
-
-            #back-button:hover {
-                opacity: 0.8; /* Effet de hover */
-            }
-
-            /* Carte du robot sélectionné */
-            #selected-robot-card { 
-                display: flex;
-                width: 150px;
-                background-color: #e4e4e4;
-                border: 2px solid #000000;
-                border-radius: 10px;
-                padding: 15px;
-                box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-            </style>
+        </style>
     </head>
 
     <body>
@@ -197,27 +144,25 @@
             <!-- Les cartes des robots seront insérées ici -->
         </div>
 
-        <!-- Conteneur de la carte sélectionnée et du panneau de contrôle -->
-        <div id="control-panel-container">
-            <div id="selected-robot-card">
-                <!-- La carte du robot sera insérée ici -->
-            </div>
+        <!-- Carte du robot sélectionné (affichée après sélection) -->
+        <div id="selected-robot-card" style="display: none; margin: 0 auto; width: 150px;">
+            <!-- La carte du robot sera insérée ici -->
+        </div>
 
-            <!-- Panneau de contrôle des robots (icônes Font Awesome) -->
-            <div id="control-panel">
-                <button class="button forward" onclick="sendCommand('forward')">
-                    <i class="fa-solid fa-circle-chevron-up"></i>
-                </button><br>
-                <button class="button left" onclick="sendCommand('left')">
-                    <i class="fa-solid fa-circle-chevron-left"></i>
-                </button>
-                <button class="button right" onclick="sendCommand('right')">
-                    <i class="fa-solid fa-circle-chevron-right"></i>
-                </button><br>
-                <button class="button backward" onclick="sendCommand('backward')">
-                    <i class="fa-solid fa-circle-chevron-down"></i>
-                </button><br>
-            </div>
+        <!-- Panneau de contrôle des robots (icônes Font Awesome) -->
+        <div id="control-panel" style="display: none;">
+            <button class="button forward" onclick="sendCommand('forward')">
+                <i class="fa-solid fa-circle-chevron-up"></i>
+            </button><br>
+            <button class="button left" onclick="sendCommand('left')">
+                <i class="fa-solid fa-circle-chevron-left"></i>
+            </button>
+            <button class="button right" onclick="sendCommand('right')">
+                <i class="fa-solid fa-circle-chevron-right"></i>
+            </button><br>
+            <button class="button backward" onclick="sendCommand('backward')">
+                <i class="fa-solid fa-circle-chevron-down"></i>
+            </button><br>
         </div>
 
         <script>
@@ -227,10 +172,13 @@
             // Ajouter un événement de clic sur le bouton de retour
             backButton.addEventListener('click', function() {
                 // Cacher le panneau de contrôle
-                document.getElementById('control-panel-container').style.display = 'none';
+                document.getElementById('control-panel').style.display = 'none';
                 
                 // Cacher le bouton de retour
                 backButton.style.display = 'none';
+
+                // Cacher la carte du robot sélectionné
+                document.getElementById('selected-robot-card').style.display = 'none';
 
                 // Afficher la grille des robots
                 document.getElementById('robot-grid').style.display = 'grid';
@@ -259,7 +207,7 @@
                         // Ajouter l'adresse IP du robot
                         const robotIP = document.createElement('div');
                         robotIP.classList.add('robot-ip');
-                        robotIP.innerText = `IP: ${robotData.ip}`;
+                        robotIP.innerText = IP: ${robotData.ip};
 
                         // Ajouter les éléments à la carte
                         robotCard.appendChild(robotName);
@@ -270,11 +218,11 @@
 
                         // Ajouter un événement de clic sur la carte
                         robotCard.addEventListener('click', function() {
-                            alert(`Connecté à ${robotData.name} avec l'IP ${robotData.ip}`);
+                            alert(Connecté à ${robotData.name} avec l'IP ${robotData.ip});
                             // Cacher la grille des robots
                             document.getElementById('robot-grid').style.display = 'none';
                             // Afficher le panneau de contrôle après la sélection du robot
-                            document.getElementById('control-panel-container').style.display = 'flex';
+                            document.getElementById('control-panel').style.display = 'block';
                             // Afficher le bouton de retour
                             backButton.style.display = 'block';
                             // Insérer la carte du robot sélectionné dans le nouveau div
@@ -284,6 +232,9 @@
                             // Créer un clone de la carte du robot sélectionné pour l'afficher
                             const clonedRobotCard = robotCard.cloneNode(true);
                             selectedRobotCard.appendChild(clonedRobotCard);
+
+                            // Afficher la carte du robot sélectionné
+                            selectedRobotCard.style.display = 'block';
                         });
                     }
 
