--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 color: #03ac1f;
             }
 
-            .button.left, .button.right {
+            .button.left {
                 color: #03ac1f;
                 margin-right: 100px;
             }
