--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             }
 
             .button {
-                padding: 10px 20px;
+                padding: 5px;
                 font-size: 120px;
                 border: none; /* Supprimer la bordure */
                 background: none; /* Supprimer le fond par défaut */
@@ -99,12 +99,13 @@
 
             .button.forward {
                 color: #03ac1f;
-                margin-bottom: -20px; /* Réduire l'espace en bas de la flèche du haut */
+                margin-bottom: -30px; /* Réduire l'espace en bas de la flèche du haut */
+                margin-top: 30px;
             }
 
             .button.backward {
                 color: #03ac1f;
-                margin-top: -20px; /* Réduire l'espace en haut de la flèche du bas */
+                margin-top: -30px; /* Réduire l'espace en haut de la flèche du bas */
             }
 
             .button.left {
