--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 background-color: #dddddd;
                 border: 2px solid #000000;
                 border-radius: 10px;
+                margin-top: 20px;
                 padding: 20px;
                 width: 150px;
                 height: 150px;
@@ -89,7 +90,7 @@
             }
 
             .button {
-                padding: 5px;
+                padding: 0px;
                 font-size: 120px;
                 border: none; /* Supprimer la bordure */
                 background: none; /* Supprimer le fond par défaut */
@@ -99,13 +100,13 @@
 
             .button.forward {
                 color: #03ac1f;
-                margin-bottom: -30px; /* Réduire l'espace en bas de la flèche du haut */
+                margin-bottom: -40px; /* Réduire l'espace en bas de la flèche du haut */
                 margin-top: 30px;
             }
 
             .button.backward {
                 color: #03ac1f;
-                margin-top: -30px; /* Réduire l'espace en haut de la flèche du bas */
+                margin-top: -40px; /* Réduire l'espace en haut de la flèche du bas */
             }
 
             .button.left {
@@ -127,8 +128,8 @@
             #back-button {
                 display: none; /* Cacher par défaut */
                 position: absolute;
-                top: 20px;
-                left: 20px;
+                top: 30px;
+                left: 30px;
                 padding: 10px 20px;
                 font-size: 14px;
                 background-color: #03ac1f; /* Couleur de fond */
