--- a/index.html
+++ b/index.html
@@ -90,16 +90,19 @@
             }
 
             #selected-robot-card {
-                display: flex;
-                justify-content: center; /* Centre horizontalement */
-                align-items: center;     /* Centre verticalement */
+                background-color: #dddddd;
+                border: 2px solid #000000;
+                border-radius: 10px;
                 margin-top: 20px;
-                width: 150px;            
-                height: 150pxh;         
-                position: absolute;      /* Position absolue */
-                top: 0;
-                left: 0;
-                background-color: rgba(0, 0, 0, 0.2); /* Optionnel : Fond semi-transparent */
+                padding: 20px;
+                width: 150px;
+                height: 150px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+                transition: transform 0.5s ease;
             }
 
             .button {
